<?xml version="1.0"?>
<package>
  <name>rosplan_interface_minesweeper</name>
  <version>0.0.0</version>
  <description>Interface between the mine sweeper and ROS Plan.</description>
  <maintainer email="bram.ridder@gmail.com">Bram Ridder</maintainer>
  <license>TODO</license>
  <url type="website"></url>
  <author email="bram.ridder@gmail.com">Bram Ridder</author>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>genmsg</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>genmsg</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
 </export>
</package>

